--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
+APScheduler==3.8.0
 click==8.0.3
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
+Flask-SSE==1.0.0
 greenlet==1.1.2
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
